--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="dark h-full">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Suzent</title>
   </head>
-  <body class="h-full bg-neutral-950 text-neutral-100">
+  <body class="h-full bg-neutral-50 text-neutral-800">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
